@@ -17,6 +17,8 @@ Broker:
 - Usernames were being lost when a non clean-session client reconnected,
   potentially causing problems with ACLs. This has been fixed.
 - Significant improvement to memory handling on Windows.
+- Bridges with outgoing topics will now set the retain flag correctly so that
+  messages will be retained on the remote broker.
 - Fix reloading of persistence_file and persistence_location.
 - Fix broker crash on incorrect protocol number.
 - Fix missing COMPAT_ECONNRESET define on Windows.
